@@ -31,10 +31,11 @@ from nicos.core.errors import NicosError, ProgrammingError, \
      ConfigurationError, UsageError, InvalidValueError, ModeError, \
      PositionError, MoveError, LimitError, CommunicationError, \
      HardwareError, TimeoutError, ComputationError, FixedError, \
-     CacheLockError
+     CacheLockError, AccessError
 from nicos.core.device import Device, AutoDevice, Readable, Moveable, \
-     HasLimits, HasOffset, HasPrecision, Measurable, usermethod
+     HasLimits, HasOffset, HasPrecision, Measurable, usermethod, \
+     requires
 from nicos.core.params import Param, Override, Value, INFO_CATEGORIES, \
      listof, nonemptylistof, tupleof, dictof, tacodev, anytype, \
      vec3, intrange, floatrange, oneof, oneofdict, none_or
-from nicos.core.utils import multiStatus, waitForStatus
+from nicos.core.utils import multiStatus, waitForStatus, GUEST, USER, ADMIN
